Fix overflowing text of the “success” message on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -985,11 +985,11 @@ nav {
   }
   &.success {
     background: rgba(14, 121, 2, 0.9);
-    padding: 3em 2em;
+    padding: 10%;
     p {
       color: #fff;
       text-align: center;
-      font-size: 1.4em;
+      font-size: 1.2em;
       margin: 1em 0;
       small { font-size: 0.6em; }
       a { color: #1CC2E2; }
